--- a/src/_colours.css
+++ b/src/_colours.css
@@ -17,6 +17,7 @@
 
   --cta-bg-colour: rgb(0, 113, 0);
   --cta-hover-bg-colour: rgb(0, 141, 0);
+  --cta-border-colour: black;
 
   --contact-btn-bg-colour: rgb(42, 84, 169);
   --contact-btn-hover-bg-colour: rgb(60, 120, 241);
